# HRP-1

./: README.md  main.py  pyproject.toml  todo List
GeneralCode/: LCM.py  README.md  XORstrings.py  andInt.py  binSearch.py  invDict.py  median.py  permComb.py  uniqueELe.py
GeneralCode/ExceptionHandling/: exception1.py
GeneralCode/Heap/: accessChildParent.py  buildHeap.py  buildHeap2.py  popFromHeap.py
GeneralCode/LinkedList/: mergeSorted.py
GeneralCode/Sort/: README.md  bigSort.py  bubbleSort.py  countingSort1.py  heapSort1.py  heapSort2.py  insertionSort.py  insertionSortSwapCounter.py  list.py  lists.py  mergeSort1.py  mergeSortBU.py  mergeSortDivide.py  orderChecker.py  quickSort1.py  quickSort2.py  quickSortPH.py  (+3 more)
HourGlassSum/: hgs.py
ProbSol/: MaxEleStack.py  README.md  arrMani.py  comparator.py  countTriplets.py  equalStack.py  flippingBits.py  iceCream.py  leaderBoard2.py  leftrot.py  magicSquare.py  magicSquare2.py  minAbs.py  minTimeReq.py  minmax.py  newYearChaos.py  pairs.py  pickingNumbers.py  recursiveDigSum.py  subArrayMaxMin.py  tripleSum.py
Regex/: HTMLLinks.py  MasterMatchstr.py  README.md  comments.py  str4.py  str5.py
SQL/: README.md
Stat/: MultiReg.py  README.md  binomialI.py  binomialII.py  facto.py  geometricDistI.py  interQuartileRange.py  linearReg.py  pearsonI.py  poissonI.py  poissonII.py  quartiles.py  spearman.py  stddev.py
UnNecCompliProb1/: UNCP1.py
UnNecCompliProblems/: UNCP10.py  UNCP11.py  UNCP12.py  UNCP13.py  UNCP14.py  UNCP15.py  UNCP2.py  UNCP3.py  UNCP4.py  UNCP5.py  UNCP6.py  UNCP7.py  UNCP8.py  UNCP9.py
(+24 files in other folders)
