[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hrp"
version = "0.1.0"
[tool.poetry.dependencies]
itertools-len = "^1.0"
python = "^3.8"
sklearn = "^0.0.0"
[tool.poetry.dev-dependencies]
